# ThaiPy2TechCal

./: README.md  pyproject.toml
thaipy2techcal/: cli.py  ical2_.py  ical_.py  rss.py
