[tool.poetry]
name = "thaipy2techcal"
version = "0.1.0"
description = ""
authors = ["Nutchanon Ninyawee <nutchanon@codustry.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
playwright = "^1.32.1"
feedparser = "^6.0.10"
requests = "^2.31.0"
ics = "^0.7.2"
icalendar = "^5.0.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
